fix: aligned navigation items

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -33,6 +33,9 @@
 }
 
 .navigation {
+  display: flex;
+  align-items: center;
+
   span {
     font-size: 14px;
     color: white;
