--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -25,6 +25,9 @@
 }
 
 .navigation {
+  display: flex;
+  align-items: center;
+
   span {
     font-size: 14px;
     color: white;
